HIPPOTHEME-15: (cherry picked from commit b4d59de) Fix pane grid: - Removed vertical grid, it wouldnt be used - Remove panel-collapsed - Restructured grid mixins - Grid system CSS lines dropped from ~8000 to ~1500

--- a/src/less/_pane-grid.less
+++ b/src/less/_pane-grid.less
@@ -13,62 +13,55 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-.pane-row,
-.pane-column {
+
+.root-pane {
     position: relative;
 }
 
-.pane-full {
-    .pane();
-}
+.generate-pane-col(@maxCols; @i; @j: @i) when (@j =< @maxCols) {
+    @columnWidthPercentage: 100% / @maxCols;
+    @offsetStartPercentage: (@i - 1) * @columnWidthPercentage;
+    @offsetEndPercentage: 100% - (@j * @columnWidthPercentage);
+    @startCol: @i;
+    @endCol: @j;
+    @dimension: ((@j + 1) - @i) * @columnWidthPercentage;
 
-.pane(@top: 0; @right: 0; @bottom: 0; @left: 0;) {
-    position: absolute;
-    top: @top;
-    right: @right;
-    bottom: @bottom;
-    left: @left;
-    overflow: auto;
-}
-
-.generate-pane-col(@breakpoint; @maxCols; @i; @j: @i) when (@j =< @maxCols) {
-    @columnWidth: (100% / @maxCols);
-    @start: (@i * @columnWidth);
-    @end: (100% - (@j * @columnWidth));
-    @dimension: (@j - @i) * @columnWidth;
-
-    .pane-row .pane-@{breakpoint}-@{i}-@{j} {
-        .pane(0; @end; 0; @start);
+    .pane-@{breakpoint}-@{startCol}-@{endCol} {
+        left: @offsetStartPercentage;
+        right: @offsetEndPercentage;
         width: @dimension;
     }
 
-    .pane-column .pane-@{breakpoint}-@{i}-@{j} {
-        .pane(@start; 0; @end; 0);
-        height: @dimension;
+    .generate-pane-col(@maxCols; @i; (@j + 1));
+}
+
+.generate-pane-grid(@maxCols: 12; @i: 1) when(@i =< @maxCols) {
+    .generate-pane-col(@maxCols; @i);
+    .generate-pane-grid(@maxCols; (@i + 1));
+}
+
+.generate-grid() {
+    [class ^= "pane-"] {
+        .pane();
     }
 
-    .generate-pane-col(@breakpoint; @maxCols; @i; (@j + 1));
-}
+    @breakpoint: xs;
+    .generate-pane-grid();
 
-.generate-pane-grid(@breakpoint: xs; @maxCols: 12; @i: 0)
-    when(@i =< @maxCols) and (@breakpoint = xs) {
-    .generate-pane-col(@breakpoint; @maxCols; @i);
-    .generate-pane-grid(@breakpoint; @maxCols; (@i + 1));
-}
-
-.generate-pane-grid(@breakpoint: xs; @maxCols: 12; @i: 0)
-    when(@i =< @maxCols) and not (@breakpoint = xs) {
-    @minWidth: ~"screen-@{breakpoint}-min";
-
-    @media (min-width: @@minWidth) {
-        .generate-pane-col(@breakpoint; @maxCols; @i);
+    @media (min-width: @screen-sm-min) {
+        @breakpoint: sm;
+        .generate-pane-grid();
     }
 
-    .generate-pane-grid(@breakpoint; @maxCols; (@i + 1));
+    @media (min-width: @screen-md-min) {
+        @breakpoint: md;
+        .generate-pane-grid();
+    }
+
+    @media (min-width: @screen-lg-min) {
+        @breakpoint: lg;
+        .generate-pane-grid();
+    }
 }
 
-.generate-pane-grid(xs);
-.generate-pane-grid(sm);
-.generate-pane-grid(md);
-.generate-pane-grid(lg);
-
+.generate-grid();
